fix(detail): z-index on heart

--- a/css/photographer.css
+++ b/css/photographer.css
@@ -256,6 +256,7 @@ form textarea {
     height: 300px;
     object-fit: cover;
     border-radius: 5px;
+    z-index: 1;
 }
 
 .mediaCard__infos {
@@ -274,6 +275,7 @@ form textarea {
     line-height: 31px;
     width: 100px;
     text-align: right;
+    z-index: 2;
 }
 
 .photographComplementary {
